src/sass/base/_base.scss
html {
  box-sizing: border-box;
}

body {
  display: block;
  height: auto;
  margin: 0;
  background-color: var(--background-color);
  transition: var(--transition-duration);
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.main-container {
  padding: 40px 0;
  @include for-desktop-up {
    display: flex;
    margin: 0 auto;
    padding-left: 24px;
    padding-right: 24px;
    box-sizing: border-box;
    width: 1440px;
  }
}

.container {
  margin: 0 auto;
  padding: 0 20px;
  box-sizing: border-box;

  @include for-phone-up {
    width: 375px;
  }

  @include for-tablet-up {
    width: 768px;
    padding: 0 32px;
  }

  @include for-desktop-up {
    width: auto;
    height: auto;
    padding: 0;
  }
}

/* width */
::-webkit-scrollbar {
  width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  /* background-color: #f1f1f1; */
  border-radius: 12px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background-color: var(--categories-scrollbar);
  border-radius: 12px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background-color: var(--categories-current-color);
  transition-property: background-color;
  transition-duration: 300ms;
  transition-timing-function: var(--transition-timing-function);
}

